--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -1,9 +1,13 @@
 .button {
+  display: inline-block;
+  padding: 0;
+  margin: 0;
   background: transparent;
   color: currentColor;
   border: none;
   cursor: pointer;
   transition: opacity .2s;
+  text-align: center;
 }
 
 .button:hover {
