--- a/pages/index.css
+++ b/pages/index.css
@@ -15,3 +15,13 @@
 /* logo */
 @import url(../blocks/logo/logo.css);
 
+/* profile */
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__photo/profile__photo.css);
+@import url(../blocks/profile/__name/profile__name.css);
+@import url(../blocks/profile/__profesion/profile__profesion.css);
+@import url(../blocks/profile/__button/profile__button.css);
+@import url(../blocks/profile/__button/_type/profile__button_type_edit.css);
+@import url(../blocks/profile/__button/_type/profile__button_type_add.css);
+
