--- a/pages/index.css
+++ b/pages/index.css
@@ -35,3 +35,14 @@
 @import url(../blocks/card/__description/card__description.css);
 @import url(../blocks/card/__button/card__button.css);
 @import url(../blocks/card/__button/_type/card__button_type_like.css);
+
+/* popup */
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_type/popup_type_edit.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__button/popup__button.css);
+@import url(../blocks/popup/__button/_type/popup__button_type_submit.css);
+@import url(../blocks/popup/__button/_type/popup__button_type_close.css);
+
