--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,6 +1,7 @@
 .profile__name {
   grid-area: name;
   align-self: center;
+  max-width: calc(100vw - 20px - 19px * 2 - 18px * 2);
 
   margin: 0;
   padding: 27px 10px 0 10px;
@@ -10,16 +11,21 @@
   font-size: 27px;
   text-align: center;
   line-height: 32px;
+  white-space: nowrap;
+  overflow-y: hidden;
+  text-overflow: ellipsis;
 }
 
 @media screen and (min-width: calc(880px + 19px * 2)){
   .profile__name {
     align-self: end;
+    max-width: 500px;
+    margin-bottom: -10px;
 
     padding: 0 18px 0 30px;
 
     font-size: 42px;
-    line-height: 29px;
+    line-height: 48px;
     text-align: left;
   }
 }
