--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -1,6 +1,14 @@
 .card {
-  display: block;
+  display: grid;
   width: 100%;
+  grid-template-columns: 1fr 62px;
+  grid-template-rows: 1fr 79px;
+  grid-template-areas:
+  "image image"
+  "description button_type_like";
+
+  padding: 0;
+  margin: 0;
 
   background: #fff;
   color: #000;
