--- a/blocks/profile/__button/_type/profile__button_type_add.css
+++ b/blocks/profile/__button/_type/profile__button_type_add.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 50px;
   border-width: 2px;
+  border-radius: 2px;
   background-image: url(../../../../images/icons/add.svg);
   background-repeat: no-repeat;
   background-size: 16px;
