fix: убрать скролл при добавлении длинного теста в профиль

--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -12,7 +12,7 @@
   text-align: center;
   line-height: 32px;
   white-space: nowrap;
-  overflow-y: hidden;
+  overflow: hidden;
   text-overflow: ellipsis;
 }
 
