--- a/blocks/card/__button/_type/card__button_type_like.css
+++ b/blocks/card/__button/_type/card__button_type_like.css
@@ -14,6 +14,10 @@
   transition: background-image .2s;
 }
 
+.card__button_type_like:hover {
+  opacity: .5;
+}
+
 .card__button_type_like:active {
   background-image: url(../../../../images/icons/like_active.svg);
   opacity: 1;
