--- a/blocks/form/__button/_type/form__button_type_close.css
+++ b/blocks/form/__button/_type/form__button_type_close.css
@@ -1,4 +1,4 @@
-.popup__button_type_close {
+.form__button_type_close {
   display: block;
   width: 36px;
   height: 36px;
@@ -14,7 +14,7 @@
 }
 
 @media screen and (min-width: calc(430px + 55px * 2)){
-  .popup__button_type_close {
+  .form__button_type_close {
     width: 55px;
     height: 55px;
     top: -47px;
