--- a/blocks/form/__imput/form__input.css
+++ b/blocks/form/__imput/form__input.css
@@ -1,8 +1,7 @@
-.popup__input {
+.form__input {
   display: block;
   width: 100%;
   padding: 10px 0;
-  margin-bottom: 21px;
 
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
@@ -11,6 +10,10 @@
   font-weight: 400;
   font-style: normal;
   font-size: 14px;
-  line-height: 17px;
+  line-height: 1;
   color: #000;
+}
+
+.form__input:first-of-type {
+  margin-bottom: 20px;
 }
