--- a/pages/index.css
+++ b/pages/index.css
@@ -40,6 +40,7 @@
 @import url(../blocks/card/__button/card__button.css);
 @import url(../blocks/card/__button/_type/card__button_type_like.css);
 @import url(../blocks/card/__button/_type/card__button_type_like-checked.css);
+@import url(../blocks/card/__button/_type/card__button_type_delete.css);
 
 /* popup */
 @import url(../blocks/popup/popup.css);
