--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,4 @@
-.form__input {
+.popup__input {
   display: block;
   width: 100%;
   padding: 10px 0;
@@ -14,6 +14,6 @@
   color: #000;
 }
 
-.form__input:first-of-type {
+.popup__input:first-of-type {
   margin-bottom: 20px;
 }
