--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,5 @@
 .popup {
-  display: none;
+  display: flex;
   width: 100vw;
   height: 100vh;
 
@@ -8,4 +8,7 @@
   left: 0;
 
   background-color: rgba(0, 0, 0, .5);
+
+  visibility: hidden;
+  opacity: 0;
 }
