--- a/pages/index.css
+++ b/pages/index.css
@@ -49,6 +49,7 @@
 /* popup */
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened.css);
+@import url(../blocks/popup/_close.css);
 @import url(../blocks/popup/_type/popup_type_image.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__container/popup__container.css);
