--- a/blocks/form/__button/form__button_disabled.css
+++ b/blocks/form/__button/form__button_disabled.css
@@ -1,10 +1,11 @@
-.form__button_type_inactive {
+.form__button_disabled {
   background: transparent;
   color: #000;
   border: 1px solid #000;
   opacity: .2;
+  cursor: not-allowed;
 }
 
-.form__button_type_inactive:hover {
+.form__button_disabled:hover {
   opacity: .2;
 }
